--- a/turbo.json
+++ b/turbo.json
@@ -4,6 +4,14 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
+      "outputs": ["dist/**"]
+    },
+    "web#build": {
+      "dependsOn": ["^web#build"],
+      "outputs": [".next/**", "!.next/cache/**"]
+    },
+    "docs#build": {
+      "dependsOn": ["^docs#build"],
       "outputs": [".next/**", "!.next/cache/**"]
     },
     "lint": {
