--- a/apps/docs/vercel.json
+++ b/apps/docs/vercel.json
@@ -1,6 +1,6 @@
 {
   "rewrites": [
-    { "source": "/web/(.*)", "destination": "/web/$1" },
-    { "source": "/web2/(.*)", "destination": "/web2/$1" }
+    { "source": "/web/(.*)", "destination": "/api/proxy?path=web&slug=$1" },
+    { "source": "/web2/(.*)", "destination": "/api/proxy?path=web2&slug=$1" }
   ]
 }
