--- a/turbo.json
+++ b/turbo.json
@@ -11,6 +11,11 @@
       "outputs": [".next/**", "public/**", "!.next/cache/**"],
       "env": ["APPLICATION_DOMAIN", "APPLICATION_BASE_PATH"]
     },
+    "web2#build": {
+      "dependsOn": ["^build"],
+      "outputs": [".next/**", "public/**", "!.next/cache/**"],
+      "env": ["APPLICATION_DOMAIN", "APPLICATION_BASE_PATH"]
+    },
     "lint": {
       "dependsOn": ["^lint"]
     },
